# OES_Foundation_model

./: .gitattributes  .gitignore  4090_comparison_final_results.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  PROJECT_SUMMARY.html  PROJECT_SUMMARY.json  README.md  Untitled  analyze_attention_importance.py  check_doc.md  evaluate_model.py  fix_env.ps1  list_runs.py  make_comparison_figures.py  make_publication_figures.py  project_state.md  pyproject.toml  requirements.txt  run_eval.slurm  run_finetune.slurm  run_finetune_libs.slurm  run_local.ps1  run_pretrain.slurm  run_pretrain_libs.slurm  setup_env.ps1  setup_env.sh  train_finetune.py  train_pretrain.py
config/: config.yaml  config_a100.yaml  config_libs_4090.yaml  config_libs_a100.yaml  config_libs_smoke.yaml  config_libs_token.yaml  config_libs_token_4090.yaml  config_libs_token_linear.yaml  config_libs_token_linear_4090.yaml  config_local.yaml  element_lod.yaml  libs_data.yaml  libs_data_measured.yaml  libs_data_smoke.yaml  line_embedding.yaml  line_embedding_smoke.yaml
data/: __init__.py  dataset.py  discretization.py  libs_pipeline.py  line_dictionary.py  line_embedding_pipeline.py  line_features.py  line_tokenization.py  measured_pipeline.py  synthetic_generator.py
models/: __init__.py  heads.py  libs_transformer.py  line_token_embedding.py  positional_encoding.py
notebooks/: demo.ipynb
publication/: __init__.py  inference_runner.py
scripts/: build_line_tokens.py  build_measured_dataset.py  check_libs_pipeline.py  check_line_count_top10.py  plot_vaskut_spectrum_zoom.py
training/: __init__.py  (+2 more)
(+18 files in other folders)
