[project]
name = "libs-foundation-model"
version = "0.1.0"
description = "Self-supervised foundation model for LIBS spectroscopy"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Core ML
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "torchaudio>=2.0.0",
    "lightning>=2.0.0,<2.5",
    "torchmetrics>=1.0.0,<1.6",
    
    # Data handling
    "numpy>=1.24.0",
    "h5py>=3.8.0",
    "pandas>=2.0.0",
    
    # Configuration
    "pyyaml>=6.0",
    "omegaconf>=2.3.0",
    
    # Visualization
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "scikit-learn>=1.2.0",
    
    # Logging
    "tensorboard>=2.12.0",
    "wandb>=0.15.0",
    
    # Utilities
    "tqdm>=4.65.0",
]

# Configure uv to use PyTorch CUDA index
[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
torchvision = { index = "pytorch-cu124" }
torchaudio = { index = "pytorch-cu124" }

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "ipykernel>=6.0.0",
    "jupyter>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["data", "models", "training", "utils"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100
target-version = ["py310"]
